--- a/emotion-reader/Sample/app/src/main/res/values/strings.xml
+++ b/emotion-reader/Sample/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="identification_description">Identify the person from a face.</string>
 
     <!-- Tips to get subscription key shown on main activity-->
-    <string name="app_name">Microsoft Cognitive Services Face</string>
+    <string name="app_name">Insahny</string>
     <string name="add_subscription_key_tip_title">Subscription Key is Needed</string>
     <string name="add_subscription_key_tip">Please put your subscription key with its corresponding endpoint to source file \"app/res/values/strings.xml\" to enable Face API calls.</string>
 
